--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 	<div id="playbutton">Please start playback first!</div>
 
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/main.js">
+		getPlayer();
+	</script>
 </body>
 </html>
 
